--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <metact charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Turismos</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>FlexTurismos</h1>
-        <ul>
-            <li><a href="#quem-somos">Quem Somos</a></li>
-            <li><a href="#servicos">Serviços</a></li>
-            <li><a href="#planos">Planos</a></li>
-        </ul>
+        <div class="flex-container menu">
+            <div><h1>FlexTurismos</h1></div>
+            <ul class="list-items">
+                <li><a href="#quem-somos">Quem Somos</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#planos">Planos</a></li>
+            </ul>
+        </div>
     </header>
     <main>
-        <section>
-            <div>
+        <section class="flex-container apresentacao">
+            <div class="texto-apresentacao">
                 <h1>Flex <br>Turismos</h1>
                 <p>O melhor serviço para você!</p>
                 <a href="#">Saiba Mais!</a>
@@ -26,17 +30,17 @@
                 <div><img src="./img/0-main.png" alt="banner de apresentação"></div>
             </div>    
         </section>
-        <section>
-            <div>
-                <img src="./img/1-quem-somos.png" alt="balcão de atendimento">
-            </div>
+        <section class="flex-container" id="quem-somos">
             <div>
                 <h2>Quem Somos</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
             </div>
+            <div>
+                <img src="./img/1-quem-somos.png" alt="balcão de atendimento">
+            </div>
         </section>
-        <section>
+        <section class="flex-container">
             <div>
                 <h2>Serviços</h2>
             </div>
@@ -58,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="flex-container">
             <div>
                 <h3>Plano 1</h3>
                 <ul>
@@ -93,7 +97,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="flex-container">
         <p>&copy; 2022 CSS Flexbox</p>
         <p>Desenvolvido por: Dionata Morais</p>
     </footer>
