--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="texto-apresentacao">
                 <h1>Flex <br>Turismos</h1>
                 <p>O melhor serviço para você!</p>
-                <a href="#">Saiba Mais!</a>
+                <a href="#" class="btn">Saiba Mais!</a>
             </div>
             <div>
                 <div><img src="./img/0-main.png" alt="banner de apresentação"></div>
@@ -40,66 +40,76 @@
                 <img src="./img/1-quem-somos.png" alt="balcão de atendimento">
             </div>
         </section>
-        <section class="flex-container">
-            <div>
-                <h2>Serviços</h2>
-            </div>
-            <div>
+        <section class="container-externo">
+            <div class="flex-container" id="servicos">
                 <div>
-                    <div><img src="./img/icon-2.png" alt="hospedagens"></div>
-                    <p>Hospedagens</p>
-                    <a href="#">Comprar Agora</a>
+                    <h2>Serviços</h2>
                 </div>
-                <div>
-                    <div><img src="./img/icon-1.png" alt="pacote de viagens"></div>
-                    <p>Pacotes de viagens</p>
-                    <a href="#">Comprar Agora</a>
-                </div>
-                <div>
-                    <div><img src="./img/icon-3.png" alt="roteiros personalizados"></div>
-                    <p>Roteiros personalizados</p>
-                    <a href="#">Comprar Agora</a>
+                <div class="list-servicos">
+                    <div class="item-servico">
+                        <div><img src="./img/icon-2.png" alt="hospedagens"></div>
+                        <p>Hospedagens</p>
+                        <a href="#">Comprar Agora</a>
+                    </div>
+                    <div class="item-servico">
+                        <div><img src="./img/icon-1.png" alt="pacote de viagens"></div>
+                        <p>Pacotes de viagens</p>
+                        <a href="#">Comprar Agora</a>
+                    </div>
+                    <div class="item-servico">
+                        <div><img src="./img/icon-3.png" alt="roteiros personalizados"></div>
+                        <p>Roteiros personalizados</p>
+                        <a href="#">Comprar Agora</a>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="flex-container">
-            <div>
-                <h3>Plano 1</h3>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de Quarto</li>
-                    <li>Guia Turístico</li>
-                </ul>
-                <a href="#">Saiba Mais!</a>
-            </div>
-            <div>
-                <h3>Plano 2</h3>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de Quarto</li>
-                    <li>Guia Turístico</li>
-                    <li>Roteiro de Trilhas</li>
-                    <li>Serviço Personalizado</li>
-                </ul>
-                <a href="#">Saiba Mais!</a>
-            </div>
-            <div>
-                <h3>Plano 3</h3>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de Quarto</li>
-                    <li>Guia Turístico</li>
-                    <li>Roteiro de Trilhas</li>
-                    <li>Serviço Personalizado</li>
-                    <li>Área Vip</li>
-                </ul>
-                <a href="#">Saiba Mais!</a>
+        <section class="flex-container" id="planos">
+            <div><h2>Planos</h2></div>
+            <div class="list-planos">
+                <div class="item-plano">
+                    <h3>Plano 1</h3>
+                    <br>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de Quarto</li>
+                        <li>Guia Turístico</li>
+                    </ul>
+                    <a href="#" class="btn">Saiba Mais!</a>
+                </div>
+                <div class="item-plano">
+                    <h3>Plano 2</h3>
+                    <br>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de Quarto</li>
+                        <li>Guia Turístico</li>
+                        <li>Roteiro de Trilhas</li>
+                        <li>Serviço Personalizado</li>
+                    </ul>
+                    <a href="#" class="btn">Saiba Mais!</a>
+                </div>
+                <div class="item-plano">
+                    <h3>Plano 3</h3>
+                    <br>
+                    <ul>
+                        <li>Suporte 24h</li>
+                        <li>Serviços de Quarto</li>
+                        <li>Guia Turístico</li>
+                        <li>Roteiro de Trilhas</li>
+                        <li>Serviço Personalizado</li>
+                        <li>Área Vip</li>
+                    </ul>
+                    <a href="#" class="btn">Saiba Mais!</a>
+                </div>
             </div>
         </section>
     </main>
-    <footer class="flex-container">
-        <p>&copy; 2022 CSS Flexbox</p>
-        <p>Desenvolvido por: Dionata Morais</p>
+    <footer>
+        <div class="flex-container footer">
+            <p>&copy; 2022 CSS Flexbox</p>
+            <p>Desenvolvido por: Dionata Morais</p>
+        </div>
     </footer>
 </body>
 </html>
