--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="flex-container menu">
             <div><h1>FlexTurismos</h1></div>
             <ul class="list-items">
-                <li><a href="#quem-somos">Quem Somos</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#planos">Planos</a></li>
+                <li><a href="#about">Quem Somos</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#plans">Planos</a></li>
             </ul>
         </div>
     </header>
     <main>
-        <section class="flex-container apresentacao">
-            <div class="texto-apresentacao">
+        <section class="flex-container presentation">
+            <div class="text-presentation">
                 <h1>Flex <br>Turismos</h1>
                 <p>O melhor serviço para você!</p>
                 <a href="#" class="btn">Saiba Mais!</a>
@@ -30,7 +30,7 @@
                 <div><img src="./img/0-main.png" alt="banner de apresentação"></div>
             </div>    
         </section>
-        <section class="flex-container" id="quem-somos">
+        <section class="flex-container" id="about">
             <div>
                 <h2>Quem Somos</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -41,22 +41,22 @@
             </div>
         </section>
         <section class="container-externo">
-            <div class="flex-container" id="servicos">
+            <div class="flex-container" id="services">
                 <div>
                     <h2>Serviços</h2>
                 </div>
-                <div class="list-servicos">
-                    <div class="item-servico">
+                <div class="list-services">
+                    <div class="item-service">
                         <div><img src="./img/icon-2.png" alt="hospedagens"></div>
                         <p>Hospedagens</p>
                         <a href="#">Comprar Agora</a>
                     </div>
-                    <div class="item-servico">
+                    <div class="item-service">
                         <div><img src="./img/icon-1.png" alt="pacote de viagens"></div>
                         <p>Pacotes de viagens</p>
                         <a href="#">Comprar Agora</a>
                     </div>
-                    <div class="item-servico">
+                    <div class="item-service">
                         <div><img src="./img/icon-3.png" alt="roteiros personalizados"></div>
                         <p>Roteiros personalizados</p>
                         <a href="#">Comprar Agora</a>
@@ -64,10 +64,10 @@
                 </div>
             </div>
         </section>
-        <section class="flex-container" id="planos">
+        <section class="flex-container" id="plans">
             <div><h2>Planos</h2></div>
-            <div class="list-planos">
-                <div class="item-plano">
+            <div class="list-plans">
+                <div class="item-plans">
                     <h3>Plano 1</h3>
                     <br>
                     <ul>
@@ -77,7 +77,7 @@
                     </ul>
                     <a href="#" class="btn">Saiba Mais!</a>
                 </div>
-                <div class="item-plano">
+                <div class="item-plans">
                     <h3>Plano 2</h3>
                     <br>
                     <ul>
@@ -89,7 +89,7 @@
                     </ul>
                     <a href="#" class="btn">Saiba Mais!</a>
                 </div>
-                <div class="item-plano">
+                <div class="item-plans">
                     <h3>Plano 3</h3>
                     <br>
                     <ul>
